# try1

./: .gitignore  AGENTS.md  COMPLETE-PROJECT-DOCUMENTATION.md  COMPREHENSIVE-REVIEW-REPORT.md  E2E_RETRIEVAL_TESTS.md  E2E_TEST_FIXES.md  E2E_TEST_IMPLEMENTATION.md  PHASE2_PROGRESS.md  PHASE3_RETRIEVAL_IMPROVEMENT.md  PHASE3_STATUS.md  PHASE4_E2E_TEST_REPORT.md  PROJECT-COMPLETION-SUMMARY.md  QWEN_INTEGRATION.md  README.md  REVIEW.md  STARTUP_GUIDE.md  TESTING_DOCUMENT_UPLOAD.md  TEST_REPORT_DOCUMENT_MANAGEMENT.md  agent.md  analyze_retrieval_quality.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  spec.md  test_debug_tools.py  test_deep_analysis_e2e.py  test_deep_analysis_real_data.py  test_document_assets_direct.py  test_document_upload.py  test_enhanced_retrieval.py  test_evaluation_api.py  test_markdown_rendering.py  test_qwen_integration.py  todo.md
.claude/: settings.local.json
config/: portal-runner.example.yaml
data/: golden_dataset.yaml
docs/: AGENTIC_DEEP_RESEARCH_PLAN.md  ENHANCED_RETRIEVAL.md  MOCK_SERVER_GUIDE.md  P0-completion-status.md  PERFORMANCE_DIAGNOSIS_GUIDE.md  PERFORMANCE_QUICK_REFERENCE.md  PERFORMANCE_SOLUTION_SUMMARY.md  PERFORMANCE_TEST_WORKFLOW.md  PHASE3_RETRIEVAL_EVALUATION_SUMMARY.md  RETRIEVAL_DEBUG_TOOLS.md  RETRIEVAL_EVALUATION_API.md  SIMPLIFIED_SOURCE_CONFIG.md  api-contracts.md  architecture-overview.md  cli-reference.md  confluence-connector-implementation.md  developer-workflow.md  environment-setup.md  external-wiki-consumption-spec.md  file-upload-connector-implementation.md  implementation-status.md  jira-bug-field-mapping.md  jira-connector-implementation.md  jira-issue-type-routing-plan.md  jira-task-platform-design.md  live-integration-plan.md  llamaindex_migration_evaluation.md  phase2-simplified-plan.md  (+15 more)
(+451 files in other folders)
