[project]
name = "ssd-knowledge-platform"
version = "0.1.0"
description = "Internal SSD knowledge platform foundation for trusted retrieval and grounded Q&A."
requires-python = ">=3.12"
dependencies = [
  "atlassian-python-api>=3.41.16",
  "pypdf>=4.0",
]

[tool.setuptools.packages.find]
include = [
  "apps*",
  "services*",
]
exclude = [
  "docs*",
  "eval*",
  "fixtures*",
  "ops*",
  "scripts*",
  "skills*",
  "tests*",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
prefect = [
  "prefect>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
